--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,13 +6,14 @@
 
 <ion-content [hidden]="true">
 
-  <div style="display: flex; justify-content: space-evenly">
-<!--     <ion-button (click)="getLatLangs()">select</ion-button>
-    <ion-button (click)="this.insertLatLang(null)">insert</ion-button>
-    <ion-button (click)="deleteLatLangs()">delete</ion-button> -->
-  </div>
+
 </ion-content>
 
 
 <div  id="map" #map class="mapa">
 </div>
+
+<!-- <div style="display: flex; justify-content: space-evenly; position: absolute; bottom: 0px; z-index: 1000000; width: 100%;">
+  <ion-button (click)="getLatLangs()">select</ion-button>
+   <ion-button (click)="deleteLatLangs()">delete</ion-button>
+ </div> -->
