--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -27,6 +27,6 @@
   <div class="contBtn">
     <ion-button class="btn" (click)="onClickNav({lat: this.selectedLoc.lat,  lng:this.selectedLoc.lng})">puedo llegar!
     </ion-button>
-    <ion-button class="btn" (click)="onClickValoraciones()">detalles</ion-button>
+    <ion-button class="btn" (click)="launckModalNewVater()">nuevo</ion-button>
   </div>
 </div>
