--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,4 +1,5 @@
-<ion-header style="position: absolute;top: 2em;z-index: 1000000;width: 100%;display: flex;justify-content: center;">
+<ion-header [hidden]="this.selectedLoc.name"
+  style="position: absolute;bottom: 2em;z-index: 1000000;width: 100%;display: flex;justify-content: center;">
   <ion-toolbar style="width: 90%;border-radius: 2em;">
     <ion-title>iTruñer</ion-title>
   </ion-toolbar>
@@ -27,6 +28,6 @@
   <div class="contBtn">
     <ion-button class="btn" (click)="onClickNav({lat: this.selectedLoc.lat,  lng:this.selectedLoc.lng})">puedo llegar!
     </ion-button>
-    <ion-button class="btn" (click)="launckModalNewVater()">nuevo</ion-button>
+    <ion-button class="btn" (click)="launckModalValoracion()">nuevo</ion-button>
   </div>
 </div>
