--- a/src/global.scss
+++ b/src/global.scss
@@ -26,6 +26,10 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 
-.loader-class{
+.loader-class {}
 
+
+.contenedor-valoracion {
+  margin: 2em;
+  border-radius: 0.5em;
 }
