--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -6,18 +6,57 @@
   background-color: #193922;
 }
 
+.cont-flotante {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+
+  .bocadillo {
+    position: absolute;
+    top: 2em;
+    width: 90%;
+    height: 3.2em;
+    background: var(--ion-color-light);
+    border-radius: 2em;
+    z-index: 100000000;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+    .input {
+      width: auto;
+      margin: 0em 0.5em;
+      color: var(--ion-color-dark);
+    }
+
+    .btn {
+      --border-radius: 2em;
+      --padding-start: 0em;
+      margin-right: 0.4em;
+      width: 2.8em;
+      height: 2.8em;
+
+      .icon {
+        position: absolute;
+        top: 0.1em;
+        left: 0.1em;
+      }
+    }
+  }
+}
 
 .contInfo {
   position: absolute;
   width: 100%;
   z-index: 1000000;
   bottom: -1em;
-  background: #ffffff;
+  background: var(--ion-color-light);
   border-radius: 1em;
   padding-bottom: 2em;
 
   div {
-    margin: 0.5em 0.5em 0em 0.5em;
+    margin: 0.5em 0.5em;
+    color: var(--ion-color-dark);
   }
 
   .contBtn {
@@ -29,7 +68,4 @@
       text-transform: none;
     }
   }
-
-
-
 }
