--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -34,7 +34,7 @@
 
 
 
-<div *ngIf="newVaterMarker" class="contInfo">
+<div *ngIf="newVaterMarker  && newVaterMarker.embebedObject.administrativeArea" class="contInfo">
   <div> {{newVaterMarker.embebedObject.locality }} - {{newVaterMarker.embebedObject.administrativeArea}} </div>
   <div style=" min-height: 2.3em;"> {{newVaterMarker.embebedObject.thoroughfare}}
     {{newVaterMarker.embebedObject.subThoroughfare}}</div>
