--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,7 +3,8 @@
     <ion-input class="input" [(ngModel)]="search"></ion-input>
 
     <ion-button class="btn" (click)="onClickNewVaterMarcker()">
-      <ion-icon class="icon" name="add-outline" size="large"></ion-icon>
+      <ion-icon *ngIf="!search" class="icon" name="add-outline" size="large"></ion-icon>
+      <ion-icon *ngIf="search" class="icon" name="search-outline" size="large"></ion-icon>
     </ion-button>
 
   </div>
@@ -15,10 +16,12 @@
 
 
 
-<div #info [hidden]="!this.selectedVater.name" class="contInfo">
+<div #info *ngIf="this.selectedVater.name" class="contInfo">
   <div> {{selectedVater.name }} </div>
   <div> {{selectedVater.locality}} </div>
   <div style=" min-height: 2.3em;"> {{selectedVater.descripcion}}</div>
+  <img *ngIf="this.selectedVaterMarker.embebedObject.foto"
+    [src]="this.cab64 + this.selectedVaterMarker.embebedObject.foto" style="width: 20%; height: auto;">
   <div>
     <ion-icon color="primary" *ngFor="let index of [1,2,3,4,5]" style="margin-right: 0.5em;height: 1.5em;width: 1.5em;"
       [name]="index <= selectedVater.puntuacion?  'star': 'star-outline'"
@@ -31,7 +34,6 @@
     </ion-button>
   </div>
 </div>
-
 
 
 <div *ngIf="newVaterMarker  && newVaterMarker.embebedObject.administrativeArea" class="contInfo">
